RESOLVED FIXED118992
AX: VoiceOver only read the first column in a safari table
https://bugs.webkit.org/show_bug.cgi?id=118992
Summary AX: VoiceOver only read the first column in a safari table
chris fleizach
Reported 2013-07-22 14:32:31 PDT
During navigation in a table of a website VoiceOver only read the content of the first column. * STEPS TO REPRODUCE: 1. Open Safari. 2. Goto: http://www.aritamba.de/index.php?ueb=20070220095949 3. Jump to the table. 4. Start interaction with the table. 5. Use the [VO+Cursor-Right] method to navigate in the table.
Attachments
patch (5.12 KB, patch)
2013-07-22 14:35 PDT, chris fleizach
thorton: review+
Radar WebKit Bug Importer
Comment 1 2013-07-22 14:33:39 PDT
chris fleizach
Comment 2 2013-07-22 14:35:05 PDT
Tim Horton
Comment 3 2013-07-22 14:40:32 PDT
Comment on attachment 207282 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=207282&action=review > LayoutTests/accessibility/table-with-mismatch-column-count-in-initial-section.html:23 > + extra space here.
Tim Horton
Comment 4 2013-07-22 14:41:26 PDT
(In reply to comment #1) > <rdar://problem/14514375> This is actually <rdar://problem/14348927>
chris fleizach
Comment 5 2013-07-22 15:03:25 PDT
Note You need to log in before you can comment on or make changes to this bug.