AX: VoiceOver only read the first column in a safari table https://bugs.webkit.org/show_bug.cgi?id=118992

Reviewed by Tim Horton.

Source/WebCore:

In case the first section has fewer columns than the rest of the table, the AXTable was only reporting the number of
columns for the first section. We need to take the max number of columns out of all sections.

Test: accessibility/table-with-mismatch-column-count-in-initial-section.html

* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::addChildren):

LayoutTests:

* accessibility/table-with-mismatch-column-count-in-initial-section-expected.txt: Added.
* accessibility/table-with-mismatch-column-count-in-initial-section.html: Added.



Canonical link: https://commits.webkit.org/136821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153002 268f45cc-cd09-0410-ab3c-d52691b4dbfc